# bluetooth-scanner-bracer

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  Vagrantfile  clippy.toml  diagram.json  generate_pixel_layout_wokwi.py  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
docs/: Design Overview.md  Library Selection.md  Links.md  Part List.md  System Architecture.md
kicad/: .gitignore  bluetooth-scanner-bracer.kicad_prl  bluetooth-scanner-bracer.kicad_pro  bluetooth-scanner-bracer.kicad_sch  sym-lib-table
kicad/libraries/: 74AHCT125N.kicad_sym  project.kicad_sym
models/: bluetooth_scanner_bracer v2.stl  bluetooth_scanner_electronics_box v4.stl
src/: ble_device_mgr.rs  led_strip.rs  light_mgr.rs  main.rs  messages.rs  tasks.rs  utils.rs
