[package]
name = "bluetooth-scanner-bracer"
version = "0.1.0"
authors = ["Anthony Canino"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }

[dependencies]
 esp-idf-sys = { version = "0.32", features = ["binstart"] }
 esp-idf-svc = "0.45.0"
esp32-nimble = "0.0.7"
smol = "1.2"
log = "0.4"


[build-dependencies]
embuild = "0.31.0"
