[package]
name = "bluetooth-scanner-bracer"
version = "0.1.0"
authors = ["Anthony Canino"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
simulator = []

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }
esp32-nimble = { git = "https://github.com/anichno/esp32-nimble.git" }
# esp32-nimble = { path = "../esp32-nimble" }

[dependencies]
esp-idf-sys = { version = "0.32", features = ["binstart"] }
esp-idf-svc = "0.45.0"
esp32-nimble = "0.0.7"
smol = "1.2"
log = "0.4"
getrandom = "0.2"
futures = "0.3.26"
esp-idf-hal = "0.40.1"
ws2812-esp32-rmt-driver = "0.5.0"
const_format = { version ="0.2.30", features = ["assertcp"] }
smart-leds = "0.3.0"
tinyvec = { version = "1.6.0", features = ["std"] }
num = "0.4.0"


[build-dependencies]
embuild = "0.31.0"
